# 3D_Img_registration

./: .gitignore  README.md  evaluate_mri.py  method.md  requirements.txt  test_mu0.py  test_pipeline.py  train_sm_shapes.py
notebooks/: colab_train_variant_b.ipynb  debug_pipeline.ipynb  kaggle_train_sm_shapes.ipynb
src/: config.py
src/data/: buckner_downloader.py  loader.py  preprocess.py
src/models/: losses.py  (+2 more)
voxelmorph/: .gitignore  README.md  pyproject.toml  setup.py
voxelmorph/docs/: mkdocs.yml  requirements.txt
voxelmorph/docs/docs/: index.md
voxelmorph/docs/docs/api/nn/: functional.md  losses.md  models.md  modules.md  nn.md
voxelmorph/docs/docs/api/py/: generators.md  py.md  utils.md
voxelmorph/docs/site/: 404.html  index.html  objects.inv
voxelmorph/docs/site/api/nn/functional/: index.html
voxelmorph/docs/site/api/nn/losses/: index.html
voxelmorph/docs/site/api/nn/models/: index.html
voxelmorph/docs/site/api/nn/modules/: index.html
voxelmorph/docs/site/api/nn/nn/: index.html
voxelmorph/docs/site/api/py/generators/: index.html
voxelmorph/docs/site/api/py/py/: index.html
voxelmorph/docs/site/api/py/utils/: index.html
voxelmorph/docs/site/search/: search_index.json
voxelmorph/scripts/: register.py  train.py
voxelmorph/tests/: test_functional.py  test_imports.py  test_models.py  test_modules.py  test_neurite_integration.py
voxelmorph/voxelmorph/: __init__.py  functional.py
voxelmorph/voxelmorph/nn/: __init__.py  functional.py  losses.py  models.py  modules.py
voxelmorph/voxelmorph/py/: __init__.py  generators.py  utils.py
(+19 files in other folders)
